Fix a widget menu z position on FIrefox 2 -- it renders behind the wysiwyg area.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/branches/iteration-2008-12-12@11806 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -403,6 +403,10 @@ html>body #st-page-details {
 }
 
 /* Wikiwyg */
+#st-page-editing-form {
+    clear: both;
+}
+
 #st-page-editing-wysiwyg {
     padding-top: 3px;
 }
@@ -2180,11 +2184,14 @@ body div#globalNav div input.searchText {
 #st-page-editing-widget-menu {
     float: left;
     width: 60px;
-    overflow:hidden;
 }
 
 #wikiwyg_toolbar .other_buttons,
 #wikiwyg_toolbar .table_buttons {
     float: left;
+}
+#st-edit-mode-toolbar {
+    clear: both;
+    margin-top: 5px;
 }
 
