--- a/nlw/share/skin/s3/css/screen.ie.css
+++ b/nlw/share/skin/s3/css/screen.ie.css
@@ -111,22 +111,9 @@ div#st-pagetools ul ul li {
     width: 14em !important;
 }
 
-/*
-#st-page-editing-toolbar {
-    width:auto;
-    margin:0 8px 0 0;
-}
-
 #st-page-editing-widget-menu {
     overflow:hidden;
 }
-
-#st-page-editing-button-toolbar {
-    float: none;
-    position: relative;
-    left: 650px;
-}
-*/
 
 /* This selector makes for about 2px of blank space on the right side of the
  * popup because IE sucks, we should look in to fixing this. Adding an
